Fixed spacing on the header and fixed syntax issues.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .Header {
   width: 100%;
-  height: 150px;
+  height: fit-content;
   margin: 0;
-  padding: 10px;
+  padding: 10px 0 0 0;
   background-color: rgb(31, 31, 31);
   display: block;
 }
